# project_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
projTemplate_DLL/: CMakeLists.txt  main.cpp
projTemplate_EXE/: CMakeLists.txt  main.cpp
projTemplate_TEST/: CMakeLists.txt  main.cpp
projTemplate_TEST/src/: simpletest.cpp
src/: sampleClass.cpp  sampleClass.hpp
tools/: post_build_tasks.py  pre_build_tasks.py  project_configurator.py
